# do-i-need-it-now

./: .gitignore  README.md  pyproject.toml
dinin/: email_confirmation.py  link_affiliate.py  link_cleaner.py  mail_sender.py  main.py  open_graph_info_fetcher.py  purchase_intent.py
dinin/templates/: about.html  email_confirmation.html  email_confirmation.txt  email_confirmation_invalid.html  email_confirmed.html  index.html  layout.html  purchase_intent_email.html  purchase_intent_email.txt  purchase_intent_submitted.html
docs/systemd/: dinin-send-emails.service  dinin-send-emails.timer  do-i-need-it-now.service
tests/: link_affiliate_test.py
